tests/ui/control_label_mismatch.stderr
error[E0080]: evaluation panicked: control label mismatch
 --> src/global.rs
  |
  | ...   validate_control_label_contract::<LABEL, K>();
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::global::Message<hibana::global::LabelMarker<40>, hibana::substrate::cap::GenericCapToken<WrongLabelKind>, WrongLabelKind> as hibana::global::MessageControlSpec>::CONTROL` failed inside this call
  |
note: inside `hibana::global::validate_control_label_contract::<40, WrongLabelKind>`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global.rs
  |
  |         panic!("control label mismatch");
  |         -------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | ...ch <M as MessageControlSpec>::CONTROL {
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         let from = <From as KnownRole...
  | |         let to = <To as KnownRole>::I...
  | |         crate::global::validate_role_...
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<40>, GenericCapToken<WrongLabelKind>, WrongLabelKind>, 0>`
  --> tests/ui/control_label_mismatch.rs:45:13
   |
45 |       let _ = g::send::<
   |  _____________^
46 | |         g::Role<0>,
47 | |         g::Role<1>,
48 | |         g::Msg<40, GenericCapToken<Wro...
49 | |         0,
50 | |     >();
   | |_______^
